@startuml

'Property types is Doctrine types

class BudgetEntry {
    string name
    integer value
    text notes
}

class Budget {
    string name
    getTotal()
}

class User {
    string email
    string password
    string[] roles
}

BudgetEntry "1..*" -- "1" Budget
Budget "0..*" -- "1" User

@enduml
